# kymostudio

./: .gitattributes  .gitignore  BEST_PRACTICE_DIAGRAMS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DSL.md  README.md  SECURITY.md  aiq.diagram  aiq.py  alignment.py  aws.py  aws_region.py  data.py  dist-workspace.toml  dsl.py  generate.py  icons-manifest.json  icons.py  layout.py  model.py  package.json  pyproject.toml  render.py  to_webp.py
bench/: README.md  pyproject.toml
bench/bpmn/: README.md  perf.py  quality.py  run.py
bench/bpmn/results/: REPORT.md  perf.json  quality.json
bench/svg2png/: README.md  perf.py  quality.py  run.py
bench/svg2png/results/: REPORT.md  perf.json  quality.json
benches/: README.md  pyproject.toml
benches/bpmn/: README.md  perf.py  pyproject.toml  quality.py  run.py
benches/bpmn/results/: REPORT.md  perf.json  quality.json
benches/editor/: README.md  perf.py  pyproject.toml  quality.py  run.py  scenarios.py
benches/editor/multi-open/: README.md  bench.py  pyproject.toml
benches/editor/reports/: 2026-06-12-SUMMARY.md  README.md
benches/editor/reports/2026-06-12-r1-baseline/: REPORT.md  quality.json
benches/editor/reports/2026-06-12-r2-cache-proxy-wasm-split/: REPORT.md
benches/editor/reports/2026-06-12-r3-lean-wasm/: perf.json  quality.json
benches/editor/reports/2026-06-12-r4-mermaid-local/: perf.json
benches/editor/reports/2026-06-12-r5-merman-flowchart-slice/: REPORT.md  perf.json  quality.json
benches/editor/research/: 2026-06-12-cache-proxy-and-wasm-diet.md  2026-06-12-lean-editor-wasm.md  2026-06-12-mermaid-client-side.md  2026-06-12-merman-flowchart-slice.md  2026-06-12-share-link-first-load.md  README.md
benches/editor/results/: REPORT.md  perf.json  quality.json
benches/editor/tab-switch/: .gitignore  README.md  bench.py  pyproject.toml
benches/editor/tab-switch/research/: 2026-06-16-tab-switch-render.md
benches/layout/: README.md  layout-quality.mjs  package-lock.json  package.json
benches/layout-algorithms/: README.md  engine-lab.mjs  geometry.mjs  layout-quality.mjs  metric.mjs  package-lock.json  package.json
benches/layout-algorithms/datasets/graphs/: branch.json  chain.json  crossing.json  cycle.json  dag.json  deep.json  diamond.json  fan-in.json  grid-mesh.json  hub.json  tree.json  wide.json
benches/layout-algorithms/datasets/layout-suite/: 01-chain.mmd  02-branch.mmd  03-fan-in.mmd  04-diamond.mmd  05-crossing.mmd  06-cycle.mmd  07-self-loop.mmd  08-multi-edge.mmd  09-hub.mmd  10-wide.mmd  11-deep.mmd  12-clusters.mmd
benches/layout-algorithms/engines/: dagrejs.mjs  elkjs.mjs  graphviz.mjs  kymo-dagre.mjs
benches/layout-algorithms/research/: 2026-06-21-layout-quality-baseline.md  2026-06-21-metrics-per-problem.md
benches/layout-algorithms/results/: REPORT-engine-lab.md  REPORT-layout-suite.md  REPORT.md
benches/mermaid-accuracy/: README.md  corpus.json  cov-worker.mjs  pyproject.toml  render.mjs
benches/mermaid-accuracy/datasets/: PROVENANCE.md  corpus.json
benches/mermaid-accuracy/datasets/architecture/: cypress-architecture_001.mmd  cypress-architecture_002.mmd  cypress-architecture_008.mmd  cypress-architecture_009.mmd  cypress-architecture_012.mmd  cypress-architecture_015.mmd  merman-probe_architecture_icontext_anchor_b_mix_992.mmd  merman-probe_architecture_icontext_anchor_img_993.mmd  merman-probe_architecture_icontext_anchor_svg_994.mmd  merman-probe_architecture_icontext_span_anchor_code_995.mmd  merman-stress_architecture_batch3_disconnected_components_056.mmd  merman-stress_architecture_batch3_many_services_one_group_059.mmd  merman-stress_architecture_batch3_nested_junctions_routing_060.mmd  merman-stress_architecture_batch3_parallel_edges_and_labels_057.mmd  (+78 more)
benches/mermaid-accuracy/research/: 2026-06-13-engine-coverage.md
benches/mermaid-format/: .gitignore  README.md  accuracy-mermaidjs.mjs  compare-all.mjs  compare-ds.mjs  coverage.mjs  coverage_report.py  engine-bench.mjs  katex-construct-diff.mjs  katex-font-probe.mjs  katex-legacy-rescore.mjs  layout-accuracy.mjs  package-lock.json  package.json  pixel-diff.mjs  pyproject.toml  style-assets.mjs  style-overlay.mjs  type-bench.mjs  type-geom.mjs  worst10-grid.mjs
benches/mermaid-format/datasets/: README.md  known-divergent.json
benches/mermaid-format/iconpacks/: README.md  aws.json
benches/mermaid-format/research/: 2026-06-13-engine-coverage.md  2026-06-13-to-15-flowchart-bench-research.md  2026-06-14-flowchart-mermaid-style.md  2026-06-14-mermaidjs-truth.md  2026-06-14-pixel-overlay-diff.md  2026-06-14-render-correctness.md  2026-06-14-three-way-raster-comparison.md  2026-06-15-flowchart-mermaid-style.md  2026-06-16-flowchart-mermaid-style.md  2026-06-17-cross-type-accuracy.md  2026-06-17-engine-comparison.md  2026-06-17-pipeline-accuracy.md
benches/mermaid-format/results/: COVERAGE.md  REPORT.md  accuracy-mermaidjs.json  compare-all.json  compare-by-dataset.json  recall.json
benches/render-api/: README.md  pyproject.toml  run.py
benches/render-api/research/: 2026-06-13-bundling-krokis-engines.md  2026-06-13-merman-and-real-graphviz.md  2026-06-13-self-render-at-the-edge.md  2026-06-13-warm-on-share.md
benches/render-api/results/: REPORT.md  perf.json
benches/svg2pdf/: README.md  accuracy.py  corpus.py  datasets.py  engines.py  gen_refs.py  perf.py  pyproject.toml  quality.py  run.py
benches/svg2pdf/research/: 2026-06-07-accuracy-vs-chrome-wpt.md  2026-06-07-full-field-svg-to-pdf.md  2026-06-07-svg-to-pdf-field-benchmark.md  README.md
benches/svg2pdf/results/: REPORT.md  accuracy.json  perf.json  quality.json
benches/svg2png/: README.md  RESEARCH.md  accuracy.py  corpus.py  datasets.py  engines.py  gen_refs.py  perf.py  pyproject.toml  quality.py  run.py
benches/svg2png/datasets/: select_dataset.py
benches/svg2png/research/: 2026-06-06-two-reference-rasterizer-benchmark.md  README.md
benches/svg2png/results/: REPORT.md  accuracy.json  perf.json  quality.json
mcps/gaphor/mcp/: README.md  pyproject.toml
mcps/gaphor/plugin/: README.md  pyproject.toml
(+4475 files in other folders)
