[project]
name = "axo"
version = "0.1.0"
description = "Diagram-as-code DSL — declarative architecture diagrams to animated SVG/WebP"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
axo = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/*.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
