[project]
name = "axo"
version = "0.1.0"
description = "Diagram-as-code DSL — declarative architecture diagrams to animated SVG/WebP"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src/python"]

[project.scripts]
axo = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/python/*.py"]

[tool.hatch.build.targets.wheel.sources]
"src/python" = ""
