[project]
# Offline benchmark harness for kymostudio — a first-class `bench/` folder
# (Rust-idiom: benches get their own directory, separate from `tests/`).
# Its own uv project so it runs standalone: `cd bench && uv run python bpmn/run.py`.
name = "kymo-bench"
version = "0.0.0"
description = "Offline quality + performance benchmarks for kymostudio."
requires-python = ">=3.10"
dependencies = ["kymostudio"]

[tool.uv.sources]
kymostudio = { path = "../packages/python", editable = true }

[tool.setuptools]
# No package to build — this project exists only to pin the bench's runtime env.
py-modules = []
