[project]
# Offline benchmark harness for kymostudio — a first-class `benches/` folder
# (Rust-idiom: benches get their own directory, separate from `tests/`).
# Its own uv project so it runs standalone: `cd benches && uv run python bpmn/run.py`.
name = "kymo-bench"
version = "0.0.0"
description = "Offline quality + performance benchmarks for kymostudio."
requires-python = ">=3.10"
dependencies = ["kymostudio"]

[project.optional-dependencies]
# Comparison rasterizers for the svg2png bench — each is benchmarked against
# kymo's own resvg core (`kymo … out.png`). They pull system libraries (Cairo,
# libvips, a C toolchain for the Cairo/ReportLab bindings); see
# `benches/svg2png/README.md`. Install with: `uv sync --extra svg2png`.
svg2png = [
    "pillow>=10.0",   # decode PNGs for the fidelity comparison
    "resvg-py>=0.3",  # standalone resvg — control (same engine as kymo)
    "pyvips>=2.2",    # librsvg via libvips
    "cairosvg>=2.7",  # Cairo
    "svglib>=1.5",    # ReportLab renderPM
    "reportlab>=4.0",
]

[tool.uv.sources]
kymostudio = { path = "../packages/python", editable = true }

[tool.setuptools]
# No package to build — this project exists only to pin the bench's runtime env.
py-modules = []
