[project]
# Offline benchmark harness for kymostudio — a first-class `benches/` folder
# (Rust-idiom: benches get their own directory, separate from `tests/`).
# Its own uv project so it runs standalone: `cd benches && uv run python bpmn/run.py`.
name = "kymo-bench"
version = "0.0.0"
description = "Offline quality + performance benchmarks for kymostudio."
requires-python = ">=3.10"
dependencies = ["kymostudio"]

[project.optional-dependencies]
# Comparison rasterizers for the svg2png bench — each is benchmarked against
# kymo's own resvg core (`kymo … out.png`). They pull system libraries (Cairo,
# libvips, a C toolchain for the Cairo/ReportLab bindings); see
# `benches/svg2png/README.md`. Install with: `uv sync --extra svg2png`.
svg2png = [
    "pillow>=10.0",   # decode PNGs for the fidelity comparison
    "resvg-py>=0.3",  # standalone resvg — control (same engine as kymo)
    "pyvips>=2.2",    # librsvg via libvips
    "cairosvg>=2.7",  # Cairo
    "svglib>=1.5",    # ReportLab renderPM
    "reportlab>=4.0",
]
# Comparison converters for the svg2pdf bench — each is benchmarked against kymo's
# own svg2pdf core (`kymo … out.pdf`, needs kymostudio-core>=0.4). PDFs are
# rasterized with PyMuPDF for the fidelity comparison; the librsvg engine shells
# out to `rsvg-convert` (Debian/Ubuntu `librsvg2-bin`, not pip-installable). See
# `benches/svg2pdf/README.md`. Install with: `uv sync --extra svg2pdf`.
svg2pdf = [
    "pymupdf>=1.24",           # rasterize + introspect produced PDFs (MuPDF, bundled)
    "pillow>=10.0",            # decode the rasterized pages for the comparison
    "vl-convert-python>=1.0",  # same svg2pdf as kymo → same-engine control
    "cairosvg>=2.7",           # Cairo svg2pdf
    "svglib>=1.5",             # ReportLab renderPDF
    "reportlab>=4.0",
    "fpdf2>=2.7",              # pure-Python SVG → PDF
]
# CLI engines for svg2pdf are system software, NOT pip deps — each skipped if its
# binary is absent: rsvg-convert (librsvg2-bin), inkscape, libreoffice, and a
# Chrome/Chromium binary. See benches/svg2pdf/README.md.
# Browser harness for the editor first-load bench — drives your installed Chrome
# by default (channel "chrome"), so no browser download needed; run
# `uv run playwright install chromium` only for the bundled one. See
# `benches/editor/README.md`. Install with: `uv sync --extra editor`.
editor = [
    "playwright>=1.45",
]

[tool.uv.sources]
kymostudio = { path = "../packages/python", editable = true }

[tool.setuptools]
# No package to build — this project exists only to pin the bench's runtime env.
py-modules = []
