[project]
# Standalone uv project — run from this folder: `uv run python run.py`.
name = "kymo-bench-bpmn"
version = "0.0.0"
description = "BPMN import/export/layout/render conformance + perf bench."
requires-python = ">=3.10"
dependencies = [
    "kymostudio",
]

[tool.uv.sources]
kymostudio = { path = "../../packages/python", editable = true }

[tool.setuptools]
# No package to build — this project only pins the bench's runtime env.
py-modules = []
