[project]
# Standalone uv project — run from this folder: `uv run python run.py`.
name = "kymo-bench-mermaid-format"
version = "0.0.0"
description = "Mermaid render-accuracy bench: kymo vs merman vs mermaid.js."
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0",
    "numpy>=1.26",
]

[tool.setuptools]
# No package to build — this project only pins the bench's runtime env.
py-modules = []
