[project]
# Standalone uv project — run from this folder: `uv run python run.py`.
name = "kymo-bench-svg2pdf"
version = "0.0.0"
description = "SVG->PDF fidelity + perf bench vs comparison converters."
requires-python = ">=3.10"
dependencies = [
    "kymostudio",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "vl-convert-python>=1.0",
    "cairosvg>=2.7",
    "svglib>=1.5",
    "reportlab>=4.0",
    "fpdf2>=2.7",
]

[tool.uv.sources]
kymostudio = { path = "../../packages/python", editable = true }

[tool.setuptools]
# No package to build — this project only pins the bench's runtime env.
py-modules = []
