[project]
name = "gaphor-mcp"
version = "0.1.0"
description = "MCP server to generate, inspect, render and export Gaphor sequence diagrams (bridges the kymo + gaphor CLIs — no GTK build)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.6.0"]

[project.scripts]
gaphor-mcp = "gaphor_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaphor_mcp"]
