[project]
name = "gaphor-remote"
version = "0.1.0"
description = "Gaphor service plugin exposing a live HTTP/JSON API (list/open/render diagrams, find elements) for the gaphor MCP server."
readme = "README.md"
requires-python = ">=3.11"
# `gaphor` is provided by the running app — install with --no-deps.
dependencies = ["gaphor>=3.0"]

[project.entry-points."gaphor.services"]
remote_control = "gaphor_remote:RemoteControl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaphor_remote"]
